# CompensationCRUD

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/app/: db.py  main.py  migrate_script.py  models.py  settings.py  views.py
src/scripts/: migrate_from_csv.py
