[tool.poetry]
name = "test-task-waveaccess"
version = "0.1.0"
description = "read-only api"
authors = ["Denis Lopatkin <denislopatkin011@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_waveaccess"}]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^1.3.0"
ruff = "^0.0.269"
black = "^23.3.0"
pre-commit = "^3.3.2"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
